# qrcodecpp

./: CMakeLists.txt  qrcode.cpp  qrcode.h  test.cxx
